--- a/styles/page.css
+++ b/styles/page.css
@@ -9,5 +9,18 @@ section {
 
 @font-face {
   font-family: 'krub';
-  src: url(../fonts/krub/Krub-Light.ttf), url(../fonts/krub/Krub-Regular.ttf), url(../fonts/krub/Krub-Bold.ttf)
+  src: url(../fonts/krub/Krub-Light.ttf);
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'krub';
+  src: url(../fonts/krub/Krub-Regular.ttf);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'krub';
+  src: url(../fonts/krub/Krub-Bold.ttf);
+  font-weight: 700;
 }
