Fixed: CLose on outside click.
1. Also removed sidebar-container classList observable.

2. Updated css structure and added few css effects.

3. Hacked out close on outside click.

Nextup: Close on nav-item clicked

--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -6441,7 +6441,8 @@ button.bg-light:hover {
 }
 
 .bg-dark {
-	background-color: #343a40 !important
+	background-color: #343a40 !important;
+	color: #ffffff
 }
 
 a.bg-dark:focus,
