--- a/styles/color.css
+++ b/styles/color.css
@@ -1,12 +1,25 @@
 :root {
-  --accent-color: #ffaa00;
-  --primary-color: #6644aa;
-  --secondary-color: #117744
+  --accent-color: #333333;
+  --primary-color: #6c6c6c;
+  --secondary-color: #222222;
+}
+
+a,
+a:hover {
+  color: currentColor
 }
 
 .bg-dark {
-  background-color: #333;
+  background-color: #333333;
   color: #fff;
+}
+
+.bg-primary-color {
+  background-color: var(--primary-color, #555555)
+}
+
+.bg-secondary-color {
+  background-color: var(--secondary-color, #333333)
 }
 
 .bg-accent {
