--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,37 +1,41 @@
-/* General scrollbar */
+/* Sidebar scrollbar */
 ::-webkit-scrollbar {
-  width: 0.5em;
-  height: 0.5em;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 0.3em;
+  height: 0.3em;
+}
+
+::-webkit-scrollbar-corner {
+  display: none
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--primary-color)
+  background-color: #343a40;
+  border-radius: 0.5em
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent
+  background-color: transparent;
+  padding: 0.5em
 }
 
 /* Sidebar scrollbar */
-.sidebar-content::-webkit-scrollbar {
+.sidebar ::-webkit-scrollbar {
   width: 0.25em;
 }
 
-.sidebar-content::-webkit-scrollbar-thumb {
+.sidebar ::-webkit-scrollbar-thumb {
   background-color: #ffffff
 }
 
+/**
+* @Description:
+* The overall containing body holding both the sidebar and the rest of the page body
+*/
 .sidebar-container {
   display: flex;
   width: 100%
-}
-
-.sidebar-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .sidebar-toggler {
@@ -40,12 +44,11 @@
 
 /* Sidebar */
 .sidebar {
-  border-right: thin solid #333333;
   position: absolute;
   left: 0;
   width: 25vw;
   height: 100vh;
-  overflow: hidden;
+  border-right: thin solid #333333;
   transition: width 0.5s, transform 0.5s, opacity 0.25s;
 }
 
@@ -54,16 +57,9 @@
   padding: 0.5em 1em;
 }
 
-.sidebar-content {
-  width: 100%;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
-
 .sidebar .app-brand {
   text-align: center;
-  padding: 1.5em 0.5em;
+  padding: 1.5em 0.75em;
 }
 
 .sidebar ul {
@@ -102,8 +98,6 @@
   position: absolute;
   right: 0;
   width: 75vw;
-  height: 100vh;
-  overflow: hidden;
   transition: width 0.5s;
 }
 
@@ -112,21 +106,28 @@
 }
 
 .topbar {
-  padding: 0.5em;
+  padding: 0.5em 0;
   display: flex;
-  box-shadow: 1px 1px 3px #33333380
+  background-color: var(--primary-color);
+  box-shadow: 0px 1px 30px #00000080;
+  position: relative;
 }
 
 .topbar .sidebar-toggler {
-  padding-left: 0;
+  transform: translateX(-50%);
+  font-size: 1.25em;
+  transition: transform 0.5s
+}
+
+.sidebar-toggled .topbar .sidebar-toggler {
+  transform: translateX(0)
 }
 
 .page-content {
   padding: 1em;
   width: 100%;
   height: 100vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  border: thin solid #ffffff;
 }
 
 /* Mini PC <---> Tablets */
@@ -135,9 +136,10 @@
     width: 12.5vw
   }
 
-  .sidebar-toggled .sidebar .label {
+  .sidebar-toggled .sidebar .app-brand .label,
+  .sidebar-toggled .sidebar .sidebar-nav .nav-item .label {
     opacity: 0;
-    margin-left: 2em !important;
+    margin-left: 2em;
   }
 
   .sidebar-toggled .page-container {
@@ -156,7 +158,24 @@
     width: 80vw;
     transform: translateX(-100%);
     opacity: 0;
+    box-shadow: 1px 0 50px #0000006b;
     z-index: 1;
+  }
+
+
+  .page-container::before {
+    content: '';
+    display: block;
+    transition: background-color 0.2s;
+  }
+
+  .sidebar-toggled .page-container::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0000006b;
   }
 
   .sidebar-toggled .sidebar {
@@ -164,13 +183,15 @@
     opacity: 1;
   }
 
-  .sidebar-toggled .sidebar-overlay.sidebar-backdrop {
-    background-color: #0000006b;
-    transition: opacity 0.5s
+  .page-container {
+    width: 100vw;
   }
 
-  .page-container,
-  .sidebar-toggled .page-container {
-    width: 100vw;
+  .topbar .sidebar-toggler {
+    transform: translateX(0)
+  }
+
+  .sidebar-toggled .topbar .sidebar-toggler {
+    transform: translateX(-50%)
   }
 }
