--- a/tier-1/styles/sidebar.css
+++ b/tier-1/styles/sidebar.css
@@ -1,23 +1,5 @@
-/* Sidebar scrollbar */
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 0.3em;
-  height: 0.3em;
-}
-
-::-webkit-scrollbar-corner {
-  display: none
-}
-
 ::-webkit-scrollbar-thumb {
   background-color: #343a40;
-  border-radius: 0.5em
-}
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-  padding: 0.5em
 }
 
 /* Sidebar scrollbar */
@@ -34,7 +16,9 @@
 * The overall containing body holding both the sidebar and the rest of the page body
 */
 .sidebar-container {
+  position: relative;
   display: flex;
+  flex-direction: row;
   width: 100%
 }
 
@@ -44,10 +28,8 @@
 
 /* Sidebar */
 .sidebar {
-  position: absolute;
-  left: 0;
   width: 25vw;
-  height: 100vh;
+  min-height: 100vh;
   border-right: thin solid #333333;
   transition: width 0.5s, transform 0.5s, opacity 0.25s;
 }
@@ -95,14 +77,14 @@
 
 /* Page */
 .page-container {
-  position: absolute;
-  right: 0;
   width: 75vw;
+  right: 0;
   transition: width 0.5s;
 }
 
 .sidebar-toggled .page-container {
-  width: 100%;
+  position: absolute;
+  width: 100vw;
 }
 
 .topbar {
@@ -114,7 +96,7 @@
 }
 
 .topbar .sidebar-toggler {
-  transform: translateX(-50%);
+  transform: translateX(-25%);
   font-size: 1.25em;
   transition: transform 0.5s
 }
@@ -126,7 +108,6 @@
 .page-content {
   padding: 1em;
   width: 100%;
-  height: 100vh;
   border: thin solid #ffffff;
 }
 
@@ -155,6 +136,10 @@
   }
 
   .sidebar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
     width: 80vw;
     transform: translateX(-100%);
     opacity: 0;
