--- a/tier-1/styles/sidebar.css
+++ b/tier-1/styles/sidebar.css
@@ -19,7 +19,8 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  width: 100%
+  width: 100%;
+  height: 100%;
 }
 
 .sidebar-toggler {
@@ -77,6 +78,9 @@
 
 /* Page */
 .page-container {
+  position: relative;
+  top: 0;
+  bottom: 0;
   width: 75vw;
   right: 0;
   transition: width 0.5s;
@@ -90,9 +94,15 @@
 .topbar {
   padding: 0.5em 0;
   display: flex;
+  align-items: center;
   background-color: var(--primary-color);
   box-shadow: 0px 1px 30px #00000080;
   position: relative;
+}
+
+.topbar .app-title {
+  margin-left: 1em;
+  font-size: 1.5em
 }
 
 .topbar .sidebar-toggler {
@@ -112,7 +122,7 @@
 }
 
 /* Mini PC <---> Tablets */
-@media (min-width:576px) and (max-width:768px) {
+@media (min-width:576px) and (max-width:767.98px) {
   .sidebar-toggled .sidebar {
     width: 12.5vw
   }
@@ -130,13 +140,13 @@
 }
 
 /* Mobile --> BELOW */
-@media (max-width:576px) {
+@media (max-width:575.98px) {
   .sidebar .sidebar-toggler {
     display: block;
   }
 
   .sidebar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
@@ -144,7 +154,7 @@
     transform: translateX(-100%);
     opacity: 0;
     box-shadow: 1px 0 50px #0000006b;
-    z-index: 1;
+    z-index: 2;
   }
 
 
@@ -155,12 +165,13 @@
   }
 
   .sidebar-toggled .page-container::before {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: #0000006b;
+    z-index: 1;
   }
 
   .sidebar-toggled .sidebar {
