--- a/tier-2/styles/layout.css
+++ b/tier-2/styles/layout.css
@@ -30,8 +30,8 @@
 }
 
 .scroll-container {
-  /* display: flex; */
-  /* flex-direction: column; */
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   height: 100%
 }
