--- a/tier-2/styles/sidebar.css
+++ b/tier-2/styles/sidebar.css
@@ -19,7 +19,8 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  width: 100%
+  width: 100%;
+  height: 100%;
 }
 
 .sidebar-toggler {
@@ -77,6 +78,9 @@
 
 /* Page */
 .page-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
   width: 75vw;
   right: 0;
   transition: width 0.5s;
@@ -90,13 +94,19 @@
 .topbar {
   padding: 0.5em 0;
   display: flex;
+  align-items: center;
   background-color: var(--primary-color);
   box-shadow: 0px 1px 30px #00000080;
   position: relative;
 }
 
+.topbar .app-title {
+  margin-left: 1em;
+  font-size: 1.5em
+}
+
 .topbar .sidebar-toggler {
-  transform: translateX(-50%);
+  transform: translateX(-25%);
   font-size: 1.25em;
   transition: transform 0.5s
 }
@@ -108,7 +118,6 @@
 .page-content {
   padding: 1em;
   width: 100%;
-  height: 100vh;
   border: thin solid #ffffff;
 }
 
@@ -140,11 +149,12 @@
     position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 80vw;
     transform: translateX(-100%);
     opacity: 0;
     box-shadow: 1px 0 50px #0000006b;
-    z-index: 1;
+    z-index: 2;
   }
 
 
@@ -155,12 +165,13 @@
   }
 
   .sidebar-toggled .page-container::before {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: #0000006b;
+    z-index: 1;
   }
 
   .sidebar-toggled .sidebar {
