--- a/styles/app.scss
+++ b/styles/app.scss
@@ -230,6 +230,7 @@ input {
     margin: 0;
     border-radius: 0.5rem;
     background-color: $muted-light;
+    opacity: 1;
 
     &::before {
       content: '';
@@ -627,7 +628,7 @@ input {
     min-width: 5rem;
   }
 
-  &+.btn {
+  &.btn-block+.btn {
     margin-top: 0.5rem;
   }
 
