--- a/styles/pages.scss
+++ b/styles/pages.scss
@@ -1,11 +1,8 @@
 @import 'variables';
 
 /* Landing Page */
-.app-logo {
-  max-width: 10rem;
-}
 
-/* Tablets/Mini PC <---> THE ENTIRE UNIVERSE  */
+/* ABPVE <--- Tablets/Mini PC  */
 @media (min-width:767.98px) {
   #landing-page {
     padding: 3rem;
