--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,7 @@
-/* @import 'mdb.css'; */
+/* 
+* @Author: Vixson
+* @Description: Unique and Very Responsive Admin Dashboard UI
+*/
 @import 'bootstrap.css';
 @import 'fontawesome.css', 'animations.css', 'colors.css', 'app.css', 'pages.css', 'sidebar.css';
 
@@ -13,36 +16,36 @@ body {
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Light.ttf');
+  src: url('fonts/Montserrat-Light.ttf');
   font-weight: lighter;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Regular.ttf');
+  src: url('/fonts/Montserrat-Regular.ttf');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Bold.ttf');
+  src: url('/fonts/Montserrat-Bold.ttf');
   font-weight: bold;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/Lato-Light.ttf');
+  src: url('/fonts/Lato-Light.ttf');
   font-weight: lighter;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/Lato-Regular.ttf');
+  src: url('/fonts/Lato-Regular.ttf');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/Lato-Bold.ttf');
+  src: url('/fonts/Lato-Bold.ttf');
   font-weight: bold;
 }
