--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,4 @@
 /* Scrollbar - Start */
-@import 'variables';
-
 * {
   scrollbar-color: $accent transparent;
   scrollbar-width: thin;
@@ -47,6 +45,10 @@ h6,
   object-fit: contain;
   width: 4rem;
   height: 4rem;
+}
+
+.app-logo {
+  width: 10rem;
 }
 
 .page-header {
@@ -144,7 +146,7 @@ h6,
 
 
 .dropdown-menu-right .dropdown-menu {
-  transform: translate(calc(-100%-1rem), -45%);
+  transform: translate(-100%, 0);
 }
 
 .dropdown-menu {
@@ -164,7 +166,7 @@ h6,
 .input,
 *:not(.input)>input {
   background-color: transparent;
-  margin-bottom: 1rem;
+  margin: 0.25rem 0 1rem;
   border-radius: 0.25rem;
   border: 1px solid currentColor;
   /* width: 100%; */
@@ -211,7 +213,7 @@ label {
   &.checkbox {
     display: flex;
     align-items: center;
-    // margin: 1rem 0;
+    margin: 1rem 0;
 
     &+ {
 
@@ -469,7 +471,7 @@ input {
     font-weight: bold;
     /* font-size: 90%; */
     /* text-transform: capitalize; */
-    margin-bottom: 0.25rem;
+    /* margin-bottom: 0.25rem; */
     padding-left: 1rem;
   }
 
@@ -552,7 +554,6 @@ input {
     padding: 0.25rem;
     margin-right: 0.5rem;
     color: currentColor;
-    // border: 1px solid $divider-color;
     border-radius: 5px;
     font-weight: bold;
     min-width: 5rem;
@@ -679,11 +680,6 @@ input {
       border-color: $primary !important;
       background-color: $primary !important;
     }
-
-    // &:hover {
-    //   background-color: $primary) !important;
-    //   border-color: $primary) !important;
-    // }
   }
 }
 
@@ -715,12 +711,6 @@ input {
       justify-content: center;
       margin-bottom: 0;
       padding: 0 1rem;
-
-      .active,
-      .text-success {
-        color: $success;
-        font-weight: bold;
-      }
     }
   }
 }
@@ -875,7 +865,7 @@ input {
   display: flex;
   flex-direction: row;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 
   [class*=bg-] {
     border: none;
@@ -948,6 +938,7 @@ input {
       width: 100%;
       position: absolute;
       box-shadow: $card-shadow;
+      border-radius: inherit;
       top: 0;
       left: 0;
       z-index: -1;
@@ -1035,7 +1026,7 @@ input {
       &::after,
       &::before {
         content: '';
-        height: 1.5px;
+        height: 0.125rem;
         width: 75%;
         display: block;
         background-color: currentColor;
@@ -1092,30 +1083,29 @@ input {
   }
 }
 
-.inner-list {
+.item-list {
   margin: 1.5rem 0;
   padding-left: 1rem;
   list-style: none;
-  font-size: 110%;
 
   .item {
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
-    font-size: 95%;
-    color: $muted;
-    // padding-bottom: 1rem;
     cursor: pointer;
 
     .icon {
       font-weight: bold;
-      margin-right: 1rem;
+      margin-right: 1.25rem;
       transition: margin-right 0.125s linear;
     }
 
+    .content {
+      margin-right: auto;
+    }
+
     &:hover .icon {
-      color: $secondary;
-      // margin-right: 1.25rem;
+      margin-right: 1.5rem;
     }
   }
 }
@@ -1180,7 +1170,6 @@ section {
 
     input[type=search] {
       width: 100%;
-      margin-bottom: 0;
     }
   }
 
