--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,5 +1,3 @@
-@import 'variables';
-
 /*.bg-night {
   $default-background: #06155c !important;
   $default: #FFFFFF;
@@ -87,9 +85,8 @@ body a,
   color: $accent;
   cursor: pointer;
   text-decoration: none !important;
-}
 
-body a:hover,
-.link:hover {
-  color: $accent-dark
+  &:hover {
+    color: darken($accent, 10%);
+  }
 }
