--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,8 +5,6 @@
 @import 'bootstrap.css';
 @import 'fontawesome.css', 'animations.css', 'colors.css', 'app.css', 'pages.css', 'sidebar.css';
 
-@import 'variables';
-
 body {
   font-family: 'Lato', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: $default-background;
@@ -16,36 +14,36 @@ body {
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Light.ttf');
+  src: url('fonts/Montserrat-Light.ttf');
   font-weight: lighter;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Regular.ttf');
+  src: url('/fonts/Montserrat-Regular.ttf');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/Montserrat-Bold.ttf');
+  src: url('/fonts/Montserrat-Bold.ttf');
   font-weight: bold;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/Lato-Light.ttf');
+  src: url('/fonts/Lato-Light.ttf');
   font-weight: lighter;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/Lato-Regular.ttf');
+  src: url('/fonts/Lato-Regular.ttf');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('../fonts/Lato-Bold.ttf');
+  src: url('/fonts/Lato-Bold.ttf');
   font-weight: bold;
 }
